mobil details spacing issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -171,7 +171,7 @@
 
   .SelectionDetails{
     width: 90%;
-    height: 40vh;
+    height: 30vh;
     margin-top: 0px;
     position: relative;
     font-size: x-small;
